--- a/src/theme.css
+++ b/src/theme.css
@@ -152,7 +152,8 @@ header > div {
   top: 0;
   width: 100%;
   background-color: #33394e;
-  padding: 10px 0;
+  padding: 20px 0;
+  box-shadow: 0px 8px 14px 10px rgb(0 0 0 / 15%);
 }
 
 .header-menu {
@@ -167,6 +168,7 @@ header > div {
 }
 
 .menu-btn-block {
+  margin-top: 20px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -180,7 +182,7 @@ header > div {
   }
 
   #app {
-    margin-top: 90px;
+    margin-top: 80px;
   }
 }
 
