--- a/src/theme.css
+++ b/src/theme.css
@@ -44,6 +44,8 @@ footer {
   width: 100%;
   background-color: #33394e;
   padding: 10px 0;
+  margin-top: 10px;
+  font-size: 12px;
 }
 
 header > div {
@@ -58,6 +60,36 @@ header > div {
   max-width: 1000px;
   padding: 0 20px;
   margin: 0 auto;
+}
+
+.menu-a {
+  text-decoration: none;
+  padding: 5px 0;
+}
+
+.modal-backdrop {
+  position: fixed;
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 0;
+  background: rgba(0, 0, 0, 0.35);
+}
+
+.footer-a {
+  padding: 3px 0;
+}
+
+.footer-a:hover {
+  color: #93a4b8;
+}
+
+.menu-a:hover {
+  border-bottom: 3px solid #93a4b8;
+}
+
+.menu-a.active {
+  border-bottom: 3px solid #93a4b8;
 }
 
 .btn {
@@ -104,6 +136,7 @@ header > div {
 .container.page-header {
   display: flex;
   justify-content: space-evenly;
+  align-items: center;
   height: 100%;
 }
 
@@ -143,9 +176,11 @@ header > div {
   width: 100%;
   background-color: #33394e;
   padding: 10px 0;
+  box-shadow: 0px 8px 14px 10px rgb(0 0 0 / 15%);
 }
 
 #mobile-header {
+  z-index: 1000;
   display: flex;
   flex-direction: column;
   position: fixed;
@@ -183,6 +218,11 @@ header > div {
 
   #app {
     margin-top: 80px;
+  }
+
+  .menu-a {
+    padding: 10px 0;
+    font-size: 1.5rem;
   }
 }
 
