--- a/src/theme.css
+++ b/src/theme.css
@@ -135,12 +135,14 @@ header > div {
 }
 
 .header-block {
+  padding: 10px;
   text-align: center;
   background-color: #33394e;
   height: 50%;
   width: 70%;
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  justify-content: space-evenly;
   align-items: center;
   font-size: 4rem;
   font-weight: 700;
@@ -230,6 +232,11 @@ header > div {
   #page-header,
   footer {
     display: none;
+  }
+
+  .header-block {
+    font-size: 2rem;
+    height: 30%;
   }
 
   #app {
