--- a/src/theme.css
+++ b/src/theme.css
@@ -15,6 +15,9 @@ body {
 
 #app {
   margin-top: 70px;
+  display: grid;
+  grid-auto-rows: 1fr 165px;
+  min-height: calc(100vh - 70px);
 }
 
 h1 {
@@ -47,6 +50,7 @@ footer {
   background-color: #33394e;
   padding: 10px 0;
   font-size: 12px;
+  margin-top: 10px;
 }
 
 header > div {
@@ -55,6 +59,17 @@ header > div {
   justify-content: center;
   align-items: center;
   height: 100%;
+}
+
+textarea {
+  resize: none;
+}
+
+form {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .container {
@@ -226,6 +241,137 @@ header > div {
   flex-direction: column;
   align-items: center;
   padding: 0 10px;
+}
+
+.portfolio-img {
+  width: 100%;
+  border-radius: 5px;
+}
+
+.card.portfolio > div {
+  margin: 10px 0;
+}
+
+.portfolio-link {
+  display: flex;
+  justify-content: space-evenly;
+  margin-top: 10px;
+}
+
+.portfolio-link {
+  width: 100%;
+  height: 100%;
+  cursor: pointer;
+  align-items: center;
+}
+
+.portfolio-img-link {
+  width: 30px;
+  height: 30px;
+  cursor: pointer;
+  transition: 0.25s;
+}
+
+.portfolio-img-link:hover {
+  transform: scale(1.2);
+}
+
+.portfolio-img-link:active {
+  opacity: 0.7;
+}
+
+.form-control {
+  margin-bottom: 10px;
+  width: 100%;
+}
+
+.form-control > label {
+  margin-left: 10px;
+}
+
+.form-control > input {
+  margin-top: 5px;
+  width: 100%;
+  outline: none;
+  border: 1px solid #93a4b8;
+  background-color: #2a3441;
+  padding: 10px;
+  border-radius: 10px;
+}
+
+.form-control.invalid > input {
+  border-color: rgb(185, 60, 60);
+}
+
+.form-control.invalid > input:focus {
+  outline: 1px solid rgb(185, 60, 60);
+}
+
+.form-control > input:hover {
+  background-color: #93a4b834;
+}
+
+.form-control > input:focus {
+  background-color: #93a4b809;
+  outline: 1px solid #93a4b8;
+}
+
+.form-control > textarea {
+  margin-top: 5px;
+  width: 100%;
+  outline: none;
+  border: 1px solid #93a4b8;
+  background-color: #2a3441;
+  padding: 10px;
+  border-radius: 10px;
+}
+
+.form-control.invalid > textarea {
+  border-color: rgb(185, 60, 60);
+}
+
+.form-control.invalid > textarea:focus {
+  outline: 1px solid rgb(185, 60, 60);
+}
+
+.form-control > textarea:hover {
+  background-color: #93a4b834;
+}
+
+.form-control > textarea:focus {
+  background-color: #93a4b809;
+  outline: 1px solid #93a4b8;
+}
+
+.skills_html-css-js {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 10px;
+}
+
+.skills_html-css-js > img {
+  max-width: 200px;
+}
+
+.skills_another {
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  margin-bottom: 10px;
+}
+
+.skill {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.skill > img {
+  max-width: 70px;
+  max-height: 70px;
+  margin-bottom: 5px;
 }
 
 @media (max-width: 909px) {
