--- a/src/theme.css
+++ b/src/theme.css
@@ -356,6 +356,7 @@ form {
 
 .skills_another {
   display: flex;
+  flex-wrap: wrap;
   align-items: center;
   justify-content: space-evenly;
   margin-bottom: 10px;
